[gd_scene load_steps=4 format=2]

[ext_resource path="res://demo7.gd" type="Script" id=1]
[ext_resource path="res://Assets/robisplash_bg.png" type="Texture" id=2]

[sub_resource type="Animation" id=1]
resource_name = "demo7"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.1, 0.1 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 352.768, 156.975 ), Vector2( 0, 0 ) ]
}

[node name="demo7" type="Node2D"]
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_right = 800.0
margin_bottom = 450.007
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="TextureRect"]
anims/demo7 = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.5
autostart = true

[node name="next" type="Button" parent="."]
margin_left = 436.439
margin_top = 398.385
margin_right = 549.439
margin_bottom = 438.385
text = "Next"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back" type="Button" parent="."]
margin_left = 305.626
margin_top = 398.385
margin_right = 418.626
margin_bottom = 438.385
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
